--- a/Questions/Question1/Question1.html
+++ b/Questions/Question1/Question1.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Question 1</title>
+<title>Question 1: Systematic AI Fund</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1619,7 +1619,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Question 1</h1>
+<h1 class="title toc-ignore">Question 1: Systematic AI Fund</h1>
 
 </div>
 
@@ -1629,8 +1629,6 @@ display: none;
 <!-- ############################## -->
 <!-- # Start Writing here: -->
 <!-- ############################## -->
-<p>Load the data, convert it to xts format, and merge into a single
-dataset for streamlined analysis.</p>
 <p>I will start my analysis using the PerfomanceAnalytics package, to
 make use of this package, it is necessary to spread the data. Since we
 also want to compare the AI Fund to managed funds, I created the
