--- a/Questions/Question4/Question4.html
+++ b/Questions/Question4/Question4.html
@@ -14,13 +14,13 @@
 
 
 
-<meta name="author" content="NF Katzke" />
+<meta name="author" content="Vincent Reinshagen" />
 
 
 <meta name="description" content="Question 4: Portfolio Commentary">
 
 <script id="pandoc-meta" type="application/json">
-{"author":"NF Katzke","bibliography":"Tex/ref.bib","csl":"Template/harvard-stellenbosch-university.csl","date":"November 2021","newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"csl":"Template/harvard-stellenbosch-university.csl","css":["Template/default-fonts-Texevier.css","Template/default-page-Texevier.css","Template/default-Texevier.css"],"self_contained":true,"template":["Template/paged-Texevier.html"],"toc":true}},"title":"Question 4: Portfolio Commentary"}
+{"author":"Vincent Reinshagen","bibliography":"Tex/ref.bib","csl":"Template/harvard-stellenbosch-university.csl","date":"November 2024","newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"csl":"Template/harvard-stellenbosch-university.csl","css":["Template/default-fonts-Texevier.css","Template/default-page-Texevier.css","Template/default-Texevier.css"],"self_contained":true,"template":["Template/paged-Texevier.html"],"toc":true}},"title":"Question 4: Portfolio Commentary"}
 </script>
 
 <title>Question 4: Portfolio Commentary</title>
@@ -32375,8 +32375,8 @@ width: calc(var(--pagedjs-width) + 2 * var(--screen-pages-spacing));
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Question 4: Portfolio Commentary</h1>
-<h5 class="author">NF Katzke</h5>
-<h5 class="date">November 2021</h5>
+<h5 class="author">Vincent Reinshagen</h5>
+<h5 class="date">November 2024</h5>
 </div>
 </div>
 
