--- a/Questions/Question5/Question5.html
+++ b/Questions/Question5/Question5.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Question 5 Volatility and GARCH estimates</title>
+<title>Question 5: Volatility and GARCH estimates</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1843,7 +1843,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Question 5 Volatility and GARCH
+<h1 class="title toc-ignore">Question 5: Volatility and GARCH
 estimates</h1>
 
 </div>
